Separate stages of server preparation for better diagnosis of problems